# rust-serverless-ml-demo

./: .gitignore  Cargo.toml  README.md  example.py  package-lock.json  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
src/: main.rs  objects.rs
