[package]
name = "rust-ml-demo"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2"
lambda_http = "0.1"
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"
ndarray = { version = "0.12.1", default-features = false, features = ["serde-1"] }
failure = "0.1.5"
