[package]
name = "rust-ml-demo"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master" }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pyrus-nn = { git = "https://github.com/milesgranger/pyrus-nn", branch = "master" }
ndarray = { version = "0.12.1", default-features = false, features = ["serde-1"] }
failure = "0.1.5"
